# pywavelet

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  License  Makefile  README.rst  api.html  api.json  backend_accuracy.html  backends.html  choosing_parameters.html  citing.html  config.json  example.html  examples.accuracy.json  examples.basic.json  examples.example-signals.json  examples.runtime.json  faq.html  genindex.html  how_it_works.html  index.html  index.json  intro.html  myst.search.json  myst.xref.json  objects.inv  pyproject.toml  quickstart.html  requirements.dev.txt  requirements.txt  roundtrip_demo.html  runtime.html  search.html  (+5 more)
.github/workflows/: ci.yml  docs.yml  pypi.yml
_sources/: choosing_parameters.rst  example.ipynb  faq.rst  index.rst  intro.md  roundtrip_demo.ipynb  window_effects.rst  window_function.rst
_sources/examples/: accuracy.ipynb  example_signals.ipynb  lisa_sprint.ipynb  lvk.ipynb  runtime.ipynb
_sources/examples/lisa_sprint/: ldc_spritz.ipynb  lisa_sprint.ipynb
_sources/examples/radler/: README.md
api/: index.html
docs/: ._toc.yml.bak  Makefile  _config.yml  _toc.yml  api.md  api.rst  backend_accuracy.ipynb  backends.rst  citing.rst  example.ipynb  faq.rst  how_it_works.rst  index.md  index.rst  index.rst.bak  intro.md  myst.yml  quickstart.rst  references.bib  roundtrip_demo.ipynb  runtime.ipynb
docs/demos/: cbc_demo.ipynb  lisa_mcmc_demo.ipynb  noise-wavelet-demo.ipynb  roundtrip_demo.ipynb
docs/examples/: accuracy.ipynb  backends.ipynb  collect_runtimes.sh  example_signals.ipynb  generate_packetization_animations.py  generate_window_assets.py  hacking_with_will.py  inverse_transform_mwe.py  lisa_sprint.ipynb  roll_wdm_transforms.ipynb  runtime.ipynb
docs/examples/lisa_sprint/: hacking_with_will.py  ldc_spritz.ipynb  lisa_data_challenge.py  lisa_sprint.ipynb
docs/examples/radler/: README.md
docs/source/: conf.py  index.rst  reading.rst
docs/source/dev/: index.rst
docs/source/user/: index.rst
examples/: accuracy.html  backends.html  basic.html  example_signals.html  inverse_transforms_example.py  lisa_sprint.html  lvk.html  quickstart.py  roll_wdm_transforms.html  runtime.html  waveform_to_wavelet_demo.py
examples/Frequency_Domain/MCMC_example_FD/: LISA_utils.py  README.md  mcmc.py  mcmc_fun.py
examples/LISA/: corner_plot.py  lisa_mcmc.py  lisa_wavelet_mcmc.py  wavelet_plot.py
examples/LISA/data/freq_domain/: samples.npy
examples/LISA/data/wavelet/: samples.npy
examples/Noise/Gaps/: estm_gap_cov.py  gap_funcs.py  gated_noise.py
examples/Noise/Gaps/Data/: check_matrices.py
examples/accuracy/: index.html
examples/basic/: index.html
examples/example-signals/: index.html
examples/lisa_sprint/: ldc_spritz.html  lisa_sprint.html
examples/radler/: README.html
examples/runtime/: index.html
src/pywavelet/: __init__.py  backend.py  data.py  fft_funcs.py  inverse_wavelet_freq_funcs.py  inverse_wavelet_time_funcs.py  logger.py  psd.py  transform_freq_funcs.py  transform_time_funcs.py  utils.py  wavelet_transforms.py
src/pywavelet/data/: __init__.py  coupled_data.py  coupled_time_and_frequency_series.py  utils.py
src/pywavelet/likelihood/: likelihood_base.py  whittle.py
src/pywavelet/plotting/: __init__.py  plot_wavelet_domain_grid.py  plot_wavelet_grid.py
src/pywavelet/transforms/: __init__.py  common.py  phi_computer.py  types.py  wavelet_transforms.py
src/pywavelet/types/: __init__.py  common.py  frequencyseries.py  plotting.py  timeseries.py  wavelet.py  wavelet_bins.py
src/pywavelet/utils/: __init__.py  analysis.py  fisher_matrix.py  lisa.py  lvk.py  snr.py  wavelet_bins.py
src/pywavelet/waveform_generator/: waveform_generator.py
studies/: cbc_demo.ipynb  lisa_mcmc_demo.ipynb  noise-wavelet-demo.ipynb
tests/: conftest.py  forward_wavelet_test.py  gw_utils.py  inverse_wavelet_test.py  ollie_example.py  test-dist.bash  test_GW170817.py  test_backend_consistency.py  test_backends.py  test_basic.py  test_coupled_series.py  test_coverage_gaps.py  test_docs.py  test_examples.py  test_forward_transform.py  test_freq_to_wdm.py  test_inverse_transform.py  test_jax.py  test_lnl.py  test_mask.py  test_more_coverage.py  test_more_types_coverage.py  test_phi.py  test_precision.py  test_psd.py  test_roundtrip_conversion.py  test_runtime_cli.py  test_snr.py  test_time_and_freq_series.py  test_time_to_freq.py  test_timefreq_type.py  test_version.py  test_waveform_lookup_table.py  test_wavelet_plot.py  test_wdm_transform.py  utils.py
tests/test_data/: roundtrip_chirp_freq.npz  roundtrip_chirp_time.npz  roundtrip_pure_f0_freq.npz  roundtrip_sine_freq.npz  roundtrip_sine_time.npz
tests/test_waveform_generators/: cbc_waveform.py  test_functional_generator.py
tests/utils/: __init__.py  conversions.py  cupy_check.py  generate_data.py  plotting.py
(+53 files in other folders)
